[gd_scene load_steps=18 format=3 uid="uid://v5v3d7sdtm24"]

[ext_resource type="Script" path="res://K9/Assets/PlayerCharacter/pc_Script.gd" id="1_hpfj1"]
[ext_resource type="Texture2D" uid="uid://dkodph71yfleb" path="res://K9/Modules/2D/CapsuleGreybox.png" id="2_ammco"]
[ext_resource type="Texture2D" uid="uid://dblsx7314c611" path="res://K9/Modules/2D/SpotLightA.png" id="3_3oq8h"]
[ext_resource type="Texture2D" uid="uid://dtkq44gsafoya" path="res://K9/Modules/2D/ScreenRimA.png" id="4_31vav"]
[ext_resource type="Texture2D" uid="uid://clj6xn8yf2cgh" path="res://K9/Modules/2D/PCSpriteSheetA.png" id="5_7nqvr"]
[ext_resource type="Texture2D" uid="uid://d3tq3eh8p7yi6" path="res://K9/Modules/2D/PCSpriteSheet.png" id="5_g3jad"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ivhgk"]
radius = 23.0217

[sub_resource type="Animation" id="Animation_rmpjw"]
resource_name = "Pulse"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.462745, 0.392157, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.37, 0.965), Vector2(1.21, 0.657), Vector2(1.37, 0.965)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}

[sub_resource type="Animation" id="Animation_hppcy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.676924, 0.476924)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ggssi"]
_data = {
"Pulse": SubResource("Animation_rmpjw"),
"RESET": SubResource("Animation_hppcy")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_p1rnl"]
atlas = ExtResource("5_g3jad")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc8so"]
atlas = ExtResource("5_g3jad")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lq85"]
atlas = ExtResource("5_g3jad")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfc1x"]
atlas = ExtResource("5_7nqvr")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ectqn"]
atlas = ExtResource("5_7nqvr")
region = Rect2(64, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_n8g06"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1rnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc8so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lq85")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfc1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ectqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfc1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ectqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfc1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfc1x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_amq6d"]
polygon = PackedVector2Array(-16, 46, -11, 38, -12, 27, -13, 16, -9, 7, -9, 1, 1, 0, 3, 6, 5, 14, 15, 22, 9, 30, 13, 47, 12, 50, 5, 50, 0, 34, -5, 35, -7, 45, -11, 52)

[node name="PC" type="CharacterBody2D"]
collision_mask = 14
script = ExtResource("1_hpfj1")

[node name="CapsuleGreybox" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_ammco")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 40)
shape = SubResource("CircleShape2D_ivhgk")

[node name="PCcam" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.05
drag_right_margin = 0.05

[node name="PCHand" type="Node2D" parent="."]

[node name="PCFlashlight" type="PointLight2D" parent="PCHand"]
position = Vector2(7.99997, 4)
rotation = 1.57666
color = Color(0.764706, 0.643137, 0, 1)
shadow_enabled = true
shadow_filter = 2
texture = ExtResource("3_3oq8h")
offset = Vector2(-0.75, -261.725)

[node name="PC_UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PC_StatusVFX" type="Control" parent="PC_UI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScreenRimA" type="Sprite2D" parent="PC_UI/PC_StatusVFX"]
position = Vector2(1, 3)
scale = Vector2(0.676924, 0.476924)
texture = ExtResource("4_31vav")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PC_UI/PC_StatusVFX/ScreenRimA"]
libraries = {
"": SubResource("AnimationLibrary_ggssi")
}
autoplay = "Pulse"
speed_scale = 1.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-49, -31)
scale = Vector2(1.47295, 1.47295)
sprite_frames = SubResource("SpriteFrames_n8g06")
animation = &"Walk"
frame_progress = 0.0345097
centered = false

[node name="LightOccluder2D" type="LightOccluder2D" parent="AnimatedSprite2D"]
position = Vector2(32.826, 20.0159)
scale = Vector2(0.800634, 0.800634)
occluder = SubResource("OccluderPolygon2D_amq6d")
occluder_light_mask = 2
